--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Activities</string>
 
-    <string name="start_activity">Start an Activity</string>
+    <string name="start_2activity">Start second Activity</string>
     <string name="open_browser">Open Web Browser</string>
+    <string name="start_3activity">Start third Activity</string>
+    <string name="open_camera">Open Camera</string>
 </resources>
