--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">Activities</string>
+    <string name="app_name">Food</string>
 
-    <string name="start_2activity">Pokreni drugu aktivnost</string>
-    <string name="open_browser">Otvori Web Browser</string>
-    <string name="start_3activity">Pokreni trecu aktivnost</string>
-    <string name="open_camera">Otvori kameru</string>
+    <string name="food_calories">"Kalorije: "</string>
+    <string name="food_description">"Opis: "</string>
+    <string name="food_name">"Ime: "</string>
+    <string name="food_price">"Cena: "</string>
 </resources>
