--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">Activities</string>
+    <string name="app_name">Food</string>
 
-    <string name="start_2activity">Start second Activity</string>
-    <string name="open_browser">Open Web Browser</string>
-    <string name="start_3activity">Start third Activity</string>
-    <string name="open_camera">Open Camera</string>
+    <string name="food_name">Name: </string>
+    <string name="food_description">Description: </string>
+    <string name="food_calories">Calories: </string>
+    <string name="food_price">Price: </string>
 </resources>
