--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -5,4 +5,6 @@
     <string name="food_description">"Opis: "</string>
     <string name="food_name">"Ime: "</string>
     <string name="food_price">"Cena: "</string>
+    <string name="food_eur">EUR</string>
+    <string name="food_cal">Kcal</string>
 </resources>
