Changed linear and relative layouts to match visually, changed list_item 1 & 2 for more aesthetics, main layout changed to display "Menu", added some strings

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -7,4 +7,6 @@
     <string name="food_price">Price:</string>
     <string name="food_eur">EUR</string>
     <string name="food_cal">Kcal</string>
+
+    <string name="tv_title">Menu</string>
 </resources>
