deleted unused classes and layouts, changed strings, changed firstActivity and Listfragment --> previous error disappeared

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -9,4 +9,5 @@
     <string name="food_cal">Kcal</string>
 
     <string name="tv_title">Menü</string>
+    <string name="cd_image">Foto des ausgewählten Essens</string>
 </resources>
