--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -9,4 +9,5 @@
     <string name="food_cal">Kcal</string>
 
     <string name="tv_title">Menu</string>
+    <string name="cd_image">Image of the chosen Food</string>
 </resources>
