--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -10,7 +10,7 @@
 
     <string name="tv_title">Menü</string>
     <string name="cd_image">Foto des ausgewählten Essens</string>
-    <string name="tb_create">Hinzufuegen</string>
-    <string name="tb_delete">Loeschen</string>
-    <string name="tb_update">Aendern</string>
+    <string name="tb_create">Hinzufügen</string>
+    <string name="tb_delete">Löschen</string>
+    <string name="tb_update">Ändern</string>
 </resources>
