--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Food</string>
 
+    <string name="setting_activity_name">Settings Activity</string>
+
     <string name="food_name">Name: </string>
     <string name="food_description">Description: </string>
     <string name="food_calories">Calories: </string>
@@ -15,5 +17,21 @@
     <string name="tb_create">Create</string>
     <string name="tb_update">Update</string>
     <string name="tb_delete">Delete</string>
+
+    <string name="restaurant_name">Name</string>
+    <string name="restaurant_address">Address</string>
+    <string name="edit_restaurant_name">Name</string>
+    <string name="edit_restaurant_address">Address</string>
+
+    <string name="dialog_about_title">About Food App</string>
+    <string name="dialog_about_message">This App was developed and designed by Luka Stojic</string>
+    <string name="dialog_about_yes">OK</string>
+
+    <string name="drawer_open">Open Navigation Drawer</string>
+    <string name="drawer_close">Close Navigation Drawer</string>
+    <string name="drawer_home">Home</string>
+    <string name="drawer_settings">Settings</string>
+    <string name="drawer_about">About</string>
+
 
 </resources>
