--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Food</string>
 
-    <string name="setting_activity_name">Settings Activity</string>
+    <string name="setting_activity_name" translatable="false">Settings Activity</string>
 
     <string name="food_name">Name: </string>
     <string name="food_description">Description: </string>
@@ -18,20 +18,24 @@
     <string name="tb_update">Update</string>
     <string name="tb_delete">Delete</string>
 
-    <string name="restaurant_name">Name</string>
-    <string name="restaurant_address">Address</string>
-    <string name="edit_restaurant_name">Name</string>
-    <string name="edit_restaurant_address">Address</string>
+    <string name="restaurant_name">Enter Restaurant\'s Name</string>
+    <string name="restaurant_address">Enter Restaurant\'s Address</string>
+    <string name="edit_restaurant_name" translatable="false">Name</string>
+    <string name="edit_restaurant_address" translatable="false">Address</string>
 
     <string name="dialog_about_title">About Food App</string>
     <string name="dialog_about_message">This App was developed and designed by Luka Stojic</string>
-    <string name="dialog_about_yes">OK</string>
+    <string name="dialog_about_yes" translatable="false">OK</string>
 
-    <string name="drawer_open">Open Navigation Drawer</string>
-    <string name="drawer_close">Close Navigation Drawer</string>
-    <string name="drawer_home">Home</string>
+    <string name="drawer_open" translatable="false">Open Navigation Drawer</string>
+    <string name="drawer_close" translatable="false">Close Navigation Drawer</string>
+    <string name="drawer_home" translatable="false">Home</string>
     <string name="drawer_settings">Settings</string>
-    <string name="drawer_about">About</string>
+    <string name="drawer_about" translatable="false">About</string>
+
+    <string name="notification_title">Item added</string>
+    <string name="notification_text">Item added to your Basket and ready to ship</string>
+
 
 
 </resources>
